--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,9 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 /PostHubServer/images/full
+/.gitignore
+/PostHubClient/.angular/cache/18.2.11/postHubClient/.tsbuildinfo
+/.gitignore
+/PostHubClient/.angular/cache/18.2.11/postHubClient/.tsbuildinfo
+/PostHubClient/.angular/cache/18.2.11/postHubClient/.tsbuildinfo
+/PostHubClient/.angular/cache/18.2.11/postHubClient/vite/deps/_metadata.json
