--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,4 @@ FodyWeavers.xsd
 /PostHubClient/.angular/cache/18.2.11/postHubClient/.tsbuildinfo
 /PostHubClient/.angular/cache/18.2.11/postHubClient/.tsbuildinfo
 /PostHubClient/.angular/cache/18.2.11/postHubClient/vite/deps/_metadata.json
+/PostHubServer/images/thumbnail/13d41688-5ca0-44d7-9933-06a10758b3b1.png
