--- a/PostHubClient/angular.json
+++ b/PostHubClient/angular.json
@@ -27,11 +27,14 @@
               }
             ],
             "styles": [
+              "./node_modules/@glidejs/glide/dist/css/glide.core.min.css",
+              "./node_modules/@glidejs/glide/dist/css/glide.theme.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/imagesloaded/imagesloaded.pkgd.min.js",
-              "node_modules/masonry-layout/dist/masonry.pkgd.min.js"
+              "node_modules/masonry-layout/dist/masonry.pkgd.min.js",
+              "./node_modules/@glidejs/glide/dist/glide.min.js"
             ]
           },
           "configurations": {
